# DigitalCurling3-SimpleClient

./: CMakeLists.txt  README.md  main.cpp
